2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-new, debbugs-handled, debbugs-stale)
	(debbugs-done, debbugs-emacs, debbugs-mode-map, debbugs-mode)
	(debbugs-select-report, debbugs-summary-mode-map)
	(debbugs-summary-mode, debbugs-send-control-message): Move to ...
	* debbugs-gnu.el: New file.

2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-send-control-message): Add more control
	messages.
	(debbugs-done): Add a face for done bugs.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-emacs): Let-bind `debbugs-port' to "gnu.org".
	Ask how many reports to retrieve, when `debbugs-get-bugs' returns
	more than 400 hits.

2011-07-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-send-control-message): Add severity and "done".
	(debbugs-select-report): Set the minor summary mode in the right
	buffer.
	(debbugs-send-control-message): Fix typo in the "done" case.
	(debbugs-emacs): Allow listing archived bugs.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-emacs): New function and modes for listing
	the Emacs bugs, reading them and updating them.

2011-06-12  Evgeny M. Zubok <zoubok@mail.ru>

	* debbugs.el (top): Pacify byte compiler.
	(debbugs): New custom group.
	(debbugs-servers): New defcustom.
	(debbugs-port): Allow user defined ports.
	(debbugs-get-mbox): New defun.

2011-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-get-bugs): Remove syntactical error.

2011-03-07  Michael Albinus  <michael.albinus@gmx.de>

	* Debbugs.wsdl:
	* README:
	* debbugs-pkg.el:
	* debbugs.el: Initial import.

;; Local Variables:
;; coding: utf-8
;; add-log-time-zone-rule: t
;; End:

    Copyright (C) 2011 Free Software Foundation, Inc.

  This file is part of GNU Emacs.

  GNU Emacs is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by