@@ -1,5 +1,10 @@
 2011-07-02  Michael Albinus  <michael.albinus@gmx.de>
 
+	* debbugs-gnu.el (debbugs-emacs): Propertize with 'help-echo.
+	(debbugs-mode-map): Define key "q".
+
+2011-07-02  Michael Albinus  <michael.albinus@gmx.de>
+
 	* debbugs.el (debbugs-new, debbugs-handled, debbugs-stale)
 	(debbugs-done, debbugs-emacs, debbugs-mode-map, debbugs-mode)
 	(debbugs-select-report, debbugs-summary-mode-map)
